@startuml

skinparam defaultFontName Helvetica

skinparam class {
    BackgroundColor White
    BorderColor #555555
    BorderThickness 1.5
    HeaderBackgroundColor #DDEEFF
    FontStyle bold
    AttributeFontSize 11
    AttributeFontColor #222222
    StereotypeFontColor #555555
    StereotypeFontSize 11
}

skinparam arrow {
    Color #444444
    FontColor #444444
    FontSize 11
    Thickness 1.2
}

skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #999900
    FontSize 11
}

skinparam shadowing false
skinparam roundCorner 8
skinparam nodesep 80
skinparam ranksep 30

class "3-make_stemmer_tabs.py" <<script>> {
    --
    Applique SpacyStemmer et SnowStemmer\nsur nostopwords_corpus.xml
}

class "3-clean_data.py" <<script>> {
    --
    args : -input, -outdir
}

abstract class Stemmer {
    - lemma_table : DataFrame
    ---
    + make_table(text : str) : DataFrame
    + transform(text : str) : str
    + transform_tolist(text : str) : list[str]
    + save_table(outdir : str) : void
}

note top of Stemmer
    Reçoit les tokens pré-traités par
    CorpusTokenizer plutôt que le texte
    brut, pour garantir la cohérence
    de la tokenisation avec le pipeline.
end note

class SpacyStemmer {
    - nlp : Language
    ---
    + make_table(text : str) : DataFrame
    + transform(text : str) : str
    + transform_tolist(text : str) : list[str]
    + save_table(outdir : str) : void

    - _make_spacy_doc(tokens : list[str]) : Doc
    - _lemmatize_tokens(tokens : list[str]) : list[str]
    - _lemmatize_with_dep(tokens : list[str]) : list[dict]
}

class SnowStemmer {
    - model        : SnowballStemmer
    - stemed_tokens : list[str]
    ---
    + make_table(text : str) : DataFrame
    + transform(text : str) : str
}

class AntiDict <<TD2>> {
    - stopwords  : set | None
    - sub_table  : DataFrame | None
    ---
    + build_from_file(path : str | Path) : void
    + build_stopwords(tf_idf : DataFrame) : set
    + build_sub_table(token_list : list) : DataFrame
}

class TFIDFProcessor <<TD2>> {
    - tokens  : DataFrame
    - tf      : DataFrame | None
    - idf     : DataFrame | None
    - tf_idf  : DataFrame | None
    ---
    + compute_tf() : DataFrame
    + compute_idf() : DataFrame
    + compute_tf_idf() : DataFrame
    + save(directory : str | Path) : void
}

class CorpusTokenizer <<TD1>> {
    ---
    + {static} tokenize(text : str) : list[str]
}

class DataCleaner {
    ---
    + substitute(input : str, outdir : str) : void
    + save_xml(path : str) : void
}

Stemmer        <|--  SpacyStemmer
Stemmer        <|--  SnowStemmer

SpacyStemmer   ..>   CorpusTokenizer : «uses»
SnowStemmer    ..>   CorpusTokenizer : «uses»

AntiDict       ..>   Stemmer    : «uses output of»
AntiDict ..> TFIDFProcessor : «uses»

"3-make_stemmer_tabs.py" ..> SpacyStemmer : «instantiates»
"3-make_stemmer_tabs.py" ..> SnowStemmer  : «instantiates»
"3-clean_data.py"        ..> DataCleaner  : «instantiates»
"3-clean_data.py"        ..> AntiDict     : «uses»

@enduml
